# Ramo3D

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md
cmake/: dependencies.cmake
docs/: ProjectDirectory.md
examples/: CMakeLists.txt
examples/basic_triangle/: CMakeLists.txt
examples/simple_viewer/: CMakeLists.txt
examples/simple_window/: CMakeLists.txt  main.cpp
scripts/: build-simple.bat  generate_vs2022.bat
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/editor/: CMakeLists.txt
src/platform/: CMakeLists.txt
src/renderer/: CMakeLists.txt
src/resources/: CMakeLists.txt
src/scene/: CMakeLists.txt
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt
tests/platform/: CMakeLists.txt
tests/renderer/: CMakeLists.txt
tests/resources/: CMakeLists.txt
tests/scene/: CMakeLists.txt
